# FVE-testing-and-data-processing

./: .gitignore  InstalForgeSettings.ifp  LICENSE.md  README.md  app-main.spec  pyproject.toml  pyproject_old.txt
dp-app/: dp-app.py
dp-app/include/: ControlTab.py
dp-app/include/UIs/: ControlTab.ui  ControlTab_ui.py
dp_app/: app-main.py  appConfig.ini  csv-RW-test.py  ini-RW-test.py
dp_app/data/: data.csv  data_less_headers.csv  data_long.csv
dp_app/include/: AutoReconnectTab.py  CSVDataTab.py  CSVRawDataTab.py  ControlPanelTab.py  GradientTab.py  MainWindow.py  PQDiagramTab.py  SetpointErrorTab.py  TimeDelayTab.py  XYGraphTab.py  fileTools.py  pgTimeAxis.py
dp_app/include/AbstractDataModels/: AbstractTableModel.py  TestsTableModel.py  csvTableModel.py
dp_app/include/UIs/: AutoReconnectTab.ui  AutoReconnectTab_ui.py  CSVDataTab.ui  CSVDataTab_ui.py  CSVRawDataTab.ui  CSVRawDataTab_ui.py  ConfigurationTab.ui  ConfigurationTab_ui.py  ControlPanelTab.ui  ControlPanelTab_ui.py  GradientTab.ui  GradientTab_ui.py  PQDiagramTab.ui  PQDiagramTab_ui.py  SetpointErrorTab.ui  SetpointErrorTab_ui.py  TimeDelayTab.ui  TimeDelayTab_ui.py  XYGraphTab.ui  XYGraphTab_ui.py
