[tool.poetry]
name = "dp-app"
version = "1.0.0"
description = "The Python desktop application for analysing FVE (photovoltaic power plant) test data"
authors = ["David Stejskal <david.stej@seznam.cz>"]
readme = "README.md"
repository = "https://github.com/stejskald/FVE-testing-and-data-processing"
packages = [{ include = "dp_app" }]
include = ["AbstractDataModels", "UIs"]
exclude = []

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pyqtgraph = "^0.13.4"
pyqt6 = "^6.6.1"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "dp_app.app-main:main"